--- a/Gfycat/src/main/AndroidManifest.xml
+++ b/Gfycat/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="net.danlew.gfycat"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
