--- a/Gfycat/build.gradle
+++ b/Gfycat/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.netflix.rxjava:rxjava-core:0.18.3'
     compile 'com.netflix.rxjava:rxjava-android:0.18.3'
+    compile 'com.jakewharton:butterknife:5.1.0'
+    compile 'com.squareup.dagger:dagger:1.2.1'
+    provided 'com.squareup.dagger:dagger-compiler:1.2.1'
 }
