--- a/Gfycat/build.gradle
+++ b/Gfycat/build.gradle
@@ -1,4 +1,18 @@
+buildscript {
+    repositories {
+        maven { url 'http://download.crashlytics.com/maven' }
+    }
+
+    dependencies {
+        classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+    }
+}
 apply plugin: 'android'
+apply plugin: 'crashlytics'
+
+repositories {
+    maven { url 'http://download.crashlytics.com/maven' }
+}
 
 android {
     compileSdkVersion 19
@@ -31,4 +45,5 @@ dependencies {
     compile 'com.jakewharton:butterknife:5.1.0'
     compile 'com.squareup.dagger:dagger:1.2.1'
     provided 'com.squareup.dagger:dagger-compiler:1.2.1'
+    compile 'com.crashlytics.android:crashlytics:1.+'
 }
