--- a/Gfycat/build.gradle
+++ b/Gfycat/build.gradle
@@ -34,6 +34,9 @@ android {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
+        debug {
+            versionNameSuffix "-SNAPSHOT"
+        }
     }
 }
 
