--- a/Gfycat/build.gradle
+++ b/Gfycat/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     compile 'com.squareup.dagger:dagger:1.2.1'
     provided 'com.squareup.dagger:dagger-compiler:1.2.1'
     compile 'com.crashlytics.android:crashlytics:1.+'
+    compile 'com.squareup.okhttp:okhttp:1.6.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:1.6.0'
 }
