--- a/Gfycat/src/main/AndroidManifest.xml
+++ b/Gfycat/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@android:style/Theme.Holo.Light.DarkActionBar">
         <activity
             android:name=".ui.MainActivity"
-            android:configChanges="orientation|screenSize"
+            android:configChanges="screenSize"
             android:label="@string/app_name"
             android:theme="@style/TranslucentActivity">
             <intent-filter>
