--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,18 @@
 
 buildscript {
     repositories {
-        mavenCentral()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.6'
     }
 }
 
 allprojects {
     repositories {
-        mavenCentral()
+        jcenter()
     }
 }
+
+apply plugin: 'com.github.ben-manes.versions'
