Added versions plugin, updated dependencies

--- a/Gfycat/build.gradle
+++ b/Gfycat/build.gradle
@@ -1,14 +1,18 @@
 buildscript {
     repositories {
         maven { url 'http://download.crashlytics.com/maven' }
+        jcenter()
     }
 
     dependencies {
         classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+        classpath 'com.github.ben-manes:gradle-versions-plugin:0.6'
     }
 }
+
 apply plugin: 'android'
 apply plugin: 'crashlytics'
+apply plugin: 'com.github.ben-manes.versions'
 
 repositories {
     maven { url 'http://download.crashlytics.com/maven' }
@@ -54,7 +58,7 @@ android {
 dependencies {
     compile 'com.squareup.retrofit:retrofit:1.8.0'
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'io.reactivex:rxjava:1.0.2'
+    compile 'io.reactivex:rxjava:1.0.3'
     compile 'io.reactivex:rxandroid:0.23.0'
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.squareup.dagger:dagger:1.2.2'
