Added gradle-retrolambda to project

--- a/Gfycat/build.gradle
+++ b/Gfycat/build.gradle
@@ -6,11 +6,13 @@ buildscript {
 
     dependencies {
         classpath 'com.crashlytics.tools.gradle:crashlytics-gradle:1.+'
+        classpath 'me.tatarka:gradle-retrolambda:3.0.1'
     }
 }
 
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 apply plugin: 'crashlytics'
+apply plugin: 'me.tatarka.retrolambda'
 
 repositories {
     maven { url 'http://download.crashlytics.com/maven' }
@@ -28,8 +30,8 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_7
-        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     signingConfigs {
