--- a/Gfycat/build.gradle
+++ b/Gfycat/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.squareup.dagger:dagger:1.2.2'
     provided 'com.squareup.dagger:dagger-compiler:1.2.2'
-    compile 'com.crashlytics.android:crashlytics:1.+'
+    compile 'com.crashlytics.android:crashlytics:1.1.13'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
 
     retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.0.6'
