--- a/Gfycat/build.gradle
+++ b/Gfycat/build.gradle
@@ -57,6 +57,8 @@ android {
 
 dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
     compile 'com.google.code.gson:gson:2.7'
 
     compile 'io.reactivex:rxjava:1.1.6'
@@ -64,10 +66,12 @@ dependencies {
     compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
 
     compile 'com.jakewharton:butterknife:8.1.0'
+    provided 'com.jakewharton:butterknife-compiler:8.1.0'
     compile 'com.squareup.dagger:dagger:1.2.5'
     provided 'com.squareup.dagger:dagger-compiler:1.2.5'
     compile 'com.crashlytics.android:crashlytics:1.1.13'
     compile 'com.squareup.okhttp3:okhttp:3.3.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.1'
 
     retrolambdaConfig 'net.orfjackal.retrolambda:retrolambda:2.3.0'
 }
