--- a/Gfycat/src/main/AndroidManifest.xml
+++ b/Gfycat/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <application
         android:name=".GfycatApplication"
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/MainTheme">
         <activity
@@ -61,7 +61,7 @@
         </activity>
         <activity
             android:name=".ui.StatsActivity"
-            android:icon="@drawable/ic_launcher">
+            android:icon="@mipmap/ic_launcher">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
